fixed level up and level down buttons on mobile safari

--- a/app/less/app.less
+++ b/app/less/app.less
@@ -53,8 +53,9 @@
         .flex-grow(1);
     }
 
-    .player-level {
-
+    .level {
+        width: 150px;
+        height: 150px;
     }
 
     .gender-selection {
@@ -76,10 +77,9 @@
         border: 0;
         color: white;
         font-size: 100px;
-        text-align: center;
         margin: 0 16px;
+        padding: 0;
         font-family: 'IM Fell English', serif;
-        outline: none;
     }
 
     .btn-back {
